# ignite

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  agent.md  eslint.config.mjs  install.sh  package.json  tsconfig.json
.github/workflows/: ci.yml
benchmarks/: results.md
design-system/ignite-docs/: MASTER.md
docs/: api.md  architecture.md  getting-started.md  preflight.md  research.md  threat-model.md  walkthrough.md
docs/man/: ignite.1
docs/site/: README.md  app.js  index.html  styles.css
examples/hello-bun/: package.json  service.yaml
examples/image-resizer/: index.js  index.ts  service.yaml
ignite-cli/: Cargo.toml
ignite-cli/src/: main.rs
ignite-core/: Cargo.toml
ignite-core/src/: disk.rs  execution.rs  lib.rs  orchestrator.rs  preflight.rs  report.rs  runtime.rs  setup.rs
ignite-core/src/platform/: apple_vz.rs  firecracker.rs  mod.rs
ignite-guest-agent/: Cargo.toml
ignite-guest-agent/src/: main.rs
ignite-http/: Cargo.toml
ignite-http/src/: main.rs  server.rs
ignite-shared/: Cargo.toml
ignite-shared/src/: error.rs  lib.rs  types.rs  validation.rs
scripts/: build-binaries.ts  release.ts
