[package]
name = "ignite-cli"
version = "0.9.0"
edition = "2024"
authors = ["dev-dami"]
license = "MIT"
repository = "https://github.com/dev-dami/ignite"
description = "Secure sandbox execution for JS/TS in microVMs"

[dependencies]
ignite-shared = { path = "../ignite-shared" }
ignite-core = { path = "../ignite-core" }
ignite-http = { path = "../ignite-http" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
axum.workspace = true


