[package]
name = "ignite-core"
version = "0.9.0"
edition = "2024"

[dependencies]
ignite-shared = { path = "../ignite-shared" }
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
tempfile.workspace = true


[dev-dependencies]
