[package]
name = "ignite-http"
version = "0.9.0"
edition = "2024"

[dependencies]
ignite-shared = { path = "../ignite-shared" }
ignite-core = { path = "../ignite-core" }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true


